<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">냠냠이</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gain_license">개인정보 이용약관</string>
    <string name="service_license">서비스 이용약관</string>
    <string name="action_settings">Settings</string>
    <string name="kakao_app_key">ecb589f47755afd74efcf48f4d4df4dd</string>
    <string name="kakao_schema">kakaoecb589f47755afd74efcf48f4d4df4dd</string>
    <string name="kakaolink_host">kakaolink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notice_adapter">NoticeAdapter</string>
    <string name="button1">Button1</string>
    <string name="kakao">kakao</string>
    <string name="hint_email">이메일 주소</string>
    <string name="hint_password">비밀번호(8자리 이상)</string>
    <string name="hint_check_password">비밀번호 확인</string>
    <string name="hint_name">이름</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_link_to_register">회원가입</string>
    <string name="btn_link_to_login">이미 가입을 하셨나요?</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">로그아웃</string>
    <string name="name">이름</string>
</resources>