<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageButton
            android:id="@+id/beebtn"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:background="@drawable/nyam_logo"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:background="@color/input_login_bg"
            android:textColorHint="@color/input_login"
            android:autoText="false" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@color/input_login_bg"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login" />

        <!-- Login Button -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#ffffff"
                android:text="@string/btn_login"
                android:textColor="@color/btn_login"
                />
            <!-- Link to Login Screen -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <!-- Link to Signup Screen -->

        </LinearLayout>
        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/white"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/btn_login"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>